🐛 Исправление JSON-конкатенации в ReviewNodeStrategy, проверка sandbox в ToolExecutor, виртуальные потоки в SchemaService, удаление мёртвого useAutoSave